--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/500px-Steam_icon_logo.svg.png"
-    />
-    <link rel="stylesheet" href="/src/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SteamCL</title>
-  </head>
-  <body>
-    <div id="root">
-      <div id="loader-wrapper" class="loader-wrapper">
-        <div class="loader"></div>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/500px-Steam_icon_logo.svg.png" />
+  <link rel="stylesheet" href="/src/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- BS5 CDN added by Phan NT Son -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <title>SteamCL</title>
+</head>
+
+<body>
+  <div id="root">
+    <div id="loader-wrapper" class="loader-wrapper">
+      <div class="loader"></div>
     </div>
+  </div>
 
-    <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const loaderWrapper = document.getElementById("loader-wrapper");
-        const startupAudio = new Audio("/sounds/startup-sound.mp3");
-        startupAudio.load();
-        const startApp = () => {
-          if (!loaderWrapper.classList.contains("hidden")) {
-            startupAudio.play().catch((error) => {
-              console.error("Lỗi phát âm thanh:", error);
-            });
-            loaderWrapper.classList.add("hidden");
-          }
-        };
-        loaderWrapper.addEventListener("click", startApp, { once: true });
-      });
-    </script>
-  </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const loaderWrapper = document.getElementById("loader-wrapper");
+      const startupAudio = new Audio("/sounds/startup-sound.mp3");
+      startupAudio.load();
+      const startApp = () => {
+        if (!loaderWrapper.classList.contains("hidden")) {
+          startupAudio.play().catch((error) => {
+            console.error("Lỗi phát âm thanh:", error);
+          });
+          loaderWrapper.classList.add("hidden");
+        }
+      };
+      loaderWrapper.addEventListener("click", startApp, { once: true });
+    });
+  </script>
+</body>
+
 </html>
