--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./public/Centurion.svg" />
+    <link rel="stylesheet" href="/src/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml"
-    href="./public/logo.svg" />
-  <link rel="stylesheet" href="/src/styles.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <!-- BS5 CDN added by Phan NT Son -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Centurion Store</title>
-</head>
+    <!-- BS5 CDN added by Phan NT Son -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Centurion Store</title>
+  </head>
 
-<body>
-  <div id="root">
-    <div id="loader-wrapper" class="loader-wrapper">
-      <div class="loader"></div>
+  <body>
+    <div id="root">
+      <div id="loader-wrapper" class="loader-wrapper">
+        <div class="loader"></div>
+      </div>
     </div>
-  </div>
 
-  <script type="module" src="/src/main.jsx"></script>
-
-
-</body>
-
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
